# functioneer

./: .gitignore  CHANGELOG.md  Examples.ipynb  LICENSE  README.md  functioneer.code-workspace  pyproject.toml  release-please-config.json  scribbles.md  setup.cfg  setup.py  tutorial.py
.github/workflows/: release-please.yaml  release-please.yml
dev_notes/: Ideas.md  api_ideas.ipynb  release_procedure.md
dev_notes/.old/: testing_functioneer_v0.1.ipynb  testing_functioneer_v0.2.ipynb  testing_functioneer_v0.3.ipynb
dist_record/v0.1.1/: functioneer-0.1.1-py3-none-any.whl
dist_record/v0.2.0/: functioneer-0.2.0-py3-none-any.whl
docs/: examples.ipynb
examples/: AdvancedExamples.ipynb  Examples.ipynb
functioneer/: __init__.py
functioneer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/functioneer/: __init__.py  analysis.py  optimize.py  parameter.py  steps.py  util.py
tests/: test_functioneer.py
