[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "functioneer"
version = "0.4.0"
authors = [{ name = "Quinn Marsh", email = "quinnmarsh@hotmail.com" }]
maintainers = [{ name = "Quinn Marsh", email = "quinnmarsh@hotmail.com" }]
description = "Effortlessly explore function behavior with the ultimate batch runner."
readme = "README.md"
license = { text = "MIT" }
keywords = ["functioneer", "analysis", "batch run", "batch runner", "automation", "autorun", "trade space", "digital twin"]
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.18.5",
  "scipy>=1.5.2",
  "pandas>=1.0.5"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.urls]
"Homepage" = "https://github.com/qthedoc/functioneer"
"Issues" = "https://github.com/qthedoc/functioneer/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://quinnmarsh.com"
