[build-system]
requires = ["setuptools >= 61", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["functioneer*"]

[tool.setuptools_scm]
version_file = "src/functioneer/_version.py" # create version file on build and install
local_scheme = "no-local-version"

[project]
name = "functioneer"
dynamic = ["version"]
description = "Effortlessly explore function behavior with the ultimate batch runner."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
authors = [{ name = "Quinn Marsh", email = "quinnmarsh@hotmail.com" }]
maintainers = [{ name = "Quinn Marsh", email = "quinnmarsh@hotmail.com" }]
keywords = ["functioneer", "analysis", "batch run", "batch runner", "automation", "autorun", "trade space", "digital twin"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

dependencies = [
  "numpy>=1.18.5",
  "scipy>=1.5.2",
  "pandas>=1.0.5"
]

[project.optional-dependencies]
test = [
  'pytest',
]

[project.urls]
"Homepage" = "https://github.com/qthedoc/functioneer"
"Issues" = "https://github.com/qthedoc/functioneer/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://quinnmarsh.com"
