[metadata]
name = functioneer
version = 0.1.0
author = Quinn Marsh
author_email = quinnmarsh@hotmail.com
description = package for setting up and runnning automated analysis of functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qthedoc/your-package
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
